--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             <div class="slide-inner">
                 <input class="slide-open" type="radio" id="slide-1" name="slide" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item">
-                    <img src="./img/animes.jpg" alt="Image 1">
+                    <img src="./img/animes.png" alt="Image 1">
                 </div>
                 <input class="slide-open" type="radio" id="slide-2" name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <img src="./img/naruto.jpg" alt="Image 2">
+                    <img src="./img/animes2.jpg" alt="Image 2">
                 </div>
                 <input class="slide-open" type="radio" id="slide-3" name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <img src="./img/one-piece.jpg" alt="Image 3">
+                    <img src="./img/animes3.jpg" alt="Image 3">
                 </div>
                 <label for="slide-3" class="slide-control prev control-1">&lt;</label>
                 <label for="slide-2" class="slide-control next control-1">&gt;</label>
@@ -61,10 +61,7 @@
             </div>
         </div>
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br>
     <!-- Footer -->
     <footer id="menu-social" class="menu">
         <div class="container">
