--- a/Galeria.html
+++ b/Galeria.html
@@ -23,9 +23,60 @@
             </nav>
         </div>
     </header>
-    <main>
-        <!--  -->
-    </main>
+    <!-- GALERÍA -->
+    <section class="gallery">
+        <h2>Nuestra Galería de Animes</h2>
+        <div class="gallery-container">
+            <div class="gallery-item">
+                <img src="./img/kimetsu-no-yaiba.jpg" alt="Kimetsu No Yaiba">
+                <div class="overlay">
+                    <div class="text">Kimetsu No Yaiba</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./img/leadale-no-daichi.jpg" alt="Leadale No Daichi">
+                <div class="overlay">
+                    <div class="text">Leadale No Daichi</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./img/Seirei-Gensouki.jpg" alt="Seirei Gensouki">
+                <div class="overlay">
+                    <div class="text">Seirei Gensouki</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="/img/Mairimashita-Iruma-Kun.jpg" alt="Mairimashita Iruma-Kun">
+                <div class="overlay">
+                    <div class="text">Mairimashita Iruma-Kun</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./img/tensei-shitara-slime-datta-ken.jpg" alt="Tensei Shitara Slime Datta Ken">
+                <div class="overlay">
+                    <div class="text">Tensei Shitara Slime Datta Ken</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./img/Tokyo-Revengers.jpg" alt="Tokyo Revengers">
+                <div class="overlay">
+                    <div class="text">Tokyo Revengers</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./img/Blue-Lock.jpg" alt="Blue Lock">
+                <div class="overlay">
+                    <div class="text">Blue Lock</div>
+                </div>
+            </div>
+            <div class="gallery-item">
+                <img src="./img/Tate-No-Yuusha.jpg" alt="Tate No Yuusha">
+                <div class="overlay">
+                    <div class="text">Tate No Yuusha</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer id="menu-social" class="menu">
         <div class="container">
