--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Anime</title>
     <link rel="stylesheet" href="style.css">
@@ -29,7 +30,8 @@
     <main>
         <div class="slide">
             <div class="slide-inner">
-                <input class="slide-open" type="radio" id="slide-1" name="slide" aria-hidden="true" hidden="" checked="checked">
+                <input class="slide-open" type="radio" id="slide-1" name="slide" aria-hidden="true" hidden=""
+                    checked="checked">
                 <div class="slide-item">
                     <img src="./img/animes.png" alt="Image 1">
                 </div>
@@ -41,12 +43,12 @@
                 <div class="slide-item">
                     <img src="./img/animes3.jpg" alt="Image 3">
                 </div>
-                <label for="slide-3" class="slide-control prev control-1">&lt;</label>
-                <label for="slide-2" class="slide-control next control-1">&gt;</label>
-                <label for="slide-1" class="slide-control prev control-2">&lt;</label>
-                <label for="slide-3" class="slide-control next control-2">&gt;</label>
-                <label for="slide-2" class="slide-control prev control-3">&lt;</label>
-                <label for="slide-1" class="slide-control next control-3">&gt;</label>
+                <label for="slide-3" class="slide-control prev control-1">‹</label>
+                <label for="slide-2" class="slide-control next control-1">›</label>
+                <label for="slide-1" class="slide-control prev control-2">‹</label>
+                <label for="slide-3" class="slide-control next control-2">›</label>
+                <label for="slide-2" class="slide-control prev control-3">‹</label>
+                <label for="slide-1" class="slide-control next control-3">›</label>
                 <ol class="slide-indicador">
                     <li>
                         <label for="slide-1" class="slide-circulo">•</label>
@@ -66,10 +68,10 @@
     <footer id="menu-social" class="menu">
         <div class="container">
             <ul id="menu-social-items" class="menu-items">
-                <li><a href="https://web.whatsapp.com/"><i class="bi bi-whatsapp"></i></a></li>
-                <li><a href="https://twitter.com/"><i class="bi bi-twitter"></i></a></li>
-                <li><a href="https://www.google.com"><i class="bi bi-google"></i></a></li>
-                <li><a href="https://www.pinterest.com/"><i class="bi bi-pinterest"></i></a></li>
+                <li><a href="https://www.whatsapp.com/?lang=es_LA"><i class="bi bi-whatsapp"></i></a></li>
+                <li><a href="https://twitter.com/?lang=es"><i class="bi bi-twitter"></i></a></li>
+                <li><a href="https://www.google.com/?hl=es"><i class="bi bi-google"></i></a></li>
+                <li><a href="https://www.pinterest.es"><i class="bi bi-pinterest"></i></a></li>
             </ul>
         </div>
     </footer>
